[package]
name = "lose95-keygen-rs"
version = "1.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Simple Losedows 95 keygen"
readme = "README"
repository = "https://app.radicle.xyz/nodes/ash.radicle.garden/rad:z2ADKLfsXMdsFt7vQq6qQDnbPD9b8"
keywords = ["keygen","losedows","losedows-95", "95", "lose95"]
categories = ["command-line-utilities", "algorithms"]
rust-version = "1.85.1"

[dependencies]
command-ifyer = "0.1.4"
rand = "0.9.1"
