[package]
name = "lose95-keygen-rs"
version = "1.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Simple Losedows 95 keygen"
readme = "README.md"
repository = "https://codeberg.org/Velocifyer/lose95-keygen-rs"
keywords = ["keygen", "losedows", "losedows-95", "95", "lose95"]
categories = ["command-line-utilities", "algorithms"]
rust-version = "1.85.1"

[dependencies]
command-ifyer = "0.1.4"
eat = "0.1.0"
rand = { version = "0.9.1", default-features = false, features = [
    "thread_rng",
] }
